--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>LAHOLMS PISTOLSKYTTEKLUBB</title>
+    <title>T2 DASHBOARD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="LaholmIcon.png">
+    <link rel="icon" type="image/png" href="target.png">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -17,13 +17,15 @@
         <div class="card">
             <div class="topnav" > 
                 <br><br />
-                <img src="Laholm.png">
-                <!--<h1 style="color:black;" id="heading"> LAHOLMS PISTOLSKYTTEKLUBB</h1>/ -->
+              <img src="logo.png">
+               
     
             </div>
-            <p class="card-title">Meny</p>
+            <p class="card-title">SKYTTEKLUBBEN</p>
             <p class="switch"><input type="button" class="button" value="Program" onclick="location.href='programs.html'"></p> 
+            <p class="switch"><input type="button" class="button" value="Klubbprogram" onclick="location.href='klubbProgram.html'"></p>
             <p class="switch"><input type="button" class="button" value="Manuellt Program" onclick="location.href='manuellProgram.html'"></p> 
+            <p class="switch"><input type="button" class="button" value="Träningsprogram" onclick="location.href='trainingProgram.html'"></p>
             <p class="switch"><input type="button" class="button" value="Inställningar" onclick="location.href='settings.html'"></p> 
             <br><br />
             <p class="version" id="networkText"></p>
